testsuite/tests/indexed-types/should_fail/T14230a.stderr

T14230a.hs:13:3: error:
    • Type indexes must match class instance head
      Expected: CD (*) (Maybe a)
        Actual: CD k a
    • In the data instance declaration for ‘CD’
      In the instance declaration for ‘C (Maybe a)’
